# Red-Files

./: README.md  terragen.html
Fonts/UI/: CMakeLists.txt  Makefile  Readme.md  blood_font_data.json  build_cpp.py  build_cpp_compiler.bat  example_font_data.json
Fonts/UI/data/config/: animation_curves.json  blood_config.json  font_config.json  particle_presets.json  performance_profiles.json  render_settings.json
Fonts/UI/include/animation/: rf_animation.h  rf_animation_controller.h  rf_animation_state.h  rf_curve_editor.h  rf_easing.h  rf_interpolator.h  rf_keyframe.h  rf_sequence.h  rf_timeline.h  rf_tween.h
Fonts/UI/include/blood/: rf_blood_coagulation.h  rf_blood_collision.h  rf_blood_drip.h  rf_blood_effect.h  rf_blood_emitter.h  rf_blood_manager.h  rf_blood_particle.h  rf_blood_pool.h  rf_blood_spatter.h  rf_blood_splash.h  rf_blood_stream.h  rf_blood_system.h  rf_blood_trail.h  rf_blood_viscosity.h  rf_particle_spawner.h  rf_particle_updater.h
Fonts/UI/include/config/: rf_config.h  rf_constants.h  rf_platform.h  rf_types.h
Fonts/UI/include/core/: rf_character_map.h  rf_font.h  rf_font_cache.h  rf_font_loader.h  rf_font_manager.h  rf_glyph.h  rf_glyph_cache.h  rf_glyph_metrics.h  rf_kerning.h  rf_line_breaker.h  rf_text_shaper.h  rf_unicode_handler.h
Fonts/UI/include/effects/: rf_chromatic_aberration.h  rf_distortion_effect.h  rf_fade_effect.h  rf_glow_effect.h  rf_outline_effect.h  rf_pulse_effect.h  rf_shadow_effect.h  rf_shake_effect.h  rf_warp_effect.h
Fonts/UI/include/memory/: rf_allocator.h  rf_linear_allocator.h  rf_memory_pool.h  rf_memory_tracker.h  rf_object_pool.h  rf_stack_allocator.h
Fonts/UI/include/utils/: rf_color.h  rf_file_utils.h  rf_hash.h  rf_math.h  rf_matrix3.h  rf_matrix4.h  rf_noise.h  rf_perlin.h  rf_quaternion.h  rf_random.h  rf_rect.h  rf_string_utils.h  rf_transform.h  rf_vector2.h  rf_vector3.h  rf_vector4.h
Fonts/UI/integration/: rf_blood_api.cpp  rf_blood_api.h  rf_font_api.cpp  rf_font_api.h  rf_integration.cpp
Fonts/UI/platform/linux/: rf_input_linux.cpp  rf_platform_linux.cpp  rf_window_x11.cpp
Fonts/UI/platform/macos/: rf_input_mac.mm  rf_platform_mac.mm  rf_window_cocoa.mm  rf_window_mac.mm
Fonts/UI/platform/windows/: rf_input_win.cpp  rf_platform_win.cpp  rf_window_win.cpp
Fonts/UI/shaders/directx/: blood_ps.hlsl  blood_vs.hlsl  font_ps.hlsl  font_vs.hlsl
Fonts/UI/shaders/opengl/blood/: blood_drip.frag  blood_drip.vert  blood_particle.frag  blood_particle.vert  blood_pool.frag  blood_pool.vert  blood_splash.frag  blood_splash.vert  blood_trail.frag  blood_trail.vert
Fonts/UI/shaders/opengl/common/: common.glsl  lighting.glsl  noise.glsl
Fonts/UI/shaders/opengl/effects/: blur.frag  chromatic.frag  composite.frag  distortion.frag  glow.frag
Fonts/UI/shaders/opengl/font/: font_base.frag  font_base.vert  font_msdf.frag  font_msdf.vert  font_outline.frag  font_sdf.frag  font_sdf.vert  font_shadow.frag
Fonts/UI/shaders/vulkan/blood/: blood_effect.comp  blood_effect.comp.spv  blood_effect_basic.comp  blood_effect_fixed.comp  blood_effect_simple.comp  blood_particle.frag  blood_particle.frag.spv  blood_particle.vert  blood_particle.vert.spv
Fonts/UI/shaders/vulkan/font/: font.frag  font.frag.spv  font.vert  font.vert.spv  font_sdf.frag  font_sdf.frag.spv
Fonts/UI/src/animation/: rf_animation_controller.cpp  rf_easing.c  rf_keyframe.cpp  rf_tween.cpp
Fonts/UI/src/blood/behaviors/: rf_blood_spatter.cpp  rf_blood_splash.cpp  rf_spread_behavior.cpp
Fonts/UI/src/core/: rf_font.c  rf_font_loader.cpp  rf_font_manager.cpp  rf_glyph_metrics.c  rf_kerning.c  rf_line_breaker.cpp  rf_text_shaper.cpp  rf_unicode_handler.cpp
Fonts/UI/src/effects/: rf_fade_effect.cpp  rf_glow_effect.cpp  rf_pulse_effect.cpp  rf_shadow_effect.cpp
Fonts/UI/src/memory/: rf_allocator.c  rf_memory_pool.c  rf_memory_tracker.cpp  rf_stack_allocator.c
Fonts/UI/tools/: font_compiler_main.cpp
Fonts/UI/tools/texture_packer/: main.cpp  packer_algorithm.cpp  rect_packer.cpp
Models/Textures/1k/aerial_asphalt_01_ao/: CMakeLists.txt
Textures/: .gitignore  Readme.md
(+500 files in other folders)
